--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^6.0.5"
+  },
+  "dependencies": {
+    "gsap": "^3.12.5",
+    "three": "^0.172.0",
+    "tweakpane": "^4.0.5"
   }
 }
