--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-top-level-await": "^1.4.4",
+    "vite-plugin-wasm": "^3.4.1"
   },
   "dependencies": {
+    "@dimforge/rapier3d": "^0.14.0",
     "gsap": "^3.12.5",
     "three": "^0.172.0",
     "tweakpane": "^4.0.5"
