--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   },
   "devDependencies": {
     "vite": "^6.0.5",
+    "vite-plugin-glsl": "^1.3.1",
     "vite-plugin-top-level-await": "^1.4.4",
     "vite-plugin-wasm": "^3.4.1"
   },
   "dependencies": {
     "@dimforge/rapier3d": "^0.14.0",
+    "d3": "^7.9.0",
+    "d3-delaunay": "^6.0.4",
+    "earcut": "^3.0.1",
     "gsap": "^3.12.5",
+    "stats.js": "^0.17.0",
     "three": "^0.172.0",
     "tweakpane": "^4.0.5"
   }
